--- a/classes/barbarian/index.html
+++ b/classes/barbarian/index.html
@@ -223,7 +223,7 @@
 <p class="NoIndent">
 	在聚會結束時，若你在該聚會期間曾經擊潰你的敵人、讓他們在你面前被逼迫驅趕、或聽見他們親屬的慟哭，你標記經驗值。</p></div>
 
-<div class="Move"><h3 class="MoveName">荒野遊蕩者 (Wide Wanderer)</h3>
+<div class="Move"><h3 class="MoveName">荒野浪蕩者 (Wide Wanderer)</h3>
 <p class="NoIndent">
 	你曾旅行遍歷過這寬廣無垠的世界。當你來到某處時，詢問GM關於當地的任何重要習俗、儀式等等，GM將告訴你任何你需要知道的情報。</p></div>
 
