--- a/equipment/index.html
+++ b/equipment/index.html
@@ -397,8 +397,9 @@
 <p class="NoIndent">
 	災厄古典只會為每個讀者提供一次答案，且閱讀這本典籍需要花費 2~3 小時的時間。</p></div>
 
-<div class="Move"><p class="MagicItem">Flask of Breath	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A simple thing, but useful when you need a breath of fresh air. The flask appears empty but cannot be filled, anything added to it simply spills out. This is because the flask is eternally full of air. If placed underwater, it will bubble forever. If pressed to the mouth, one can breathe normally—smoke is no concern, for example. I’m sure you’ll find all sorts of unusual uses for it.</p></div>
+<div class="Move"><p class="MagicItem">氣息之瓶 (Flask of Breath)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	一個單純的小道具，帶在你需要呼吸新鮮空氣時特別有用。儘管這個瓶子看起來空空如也，但卻無法裝進任何東西，任何被加進瓶內的事物都會從中溢出。這是因為這個瓶子中永遠充滿了空氣。若置於水中，它會持續不斷地冒出泡泡，直到永遠。如果把瓶口按到嘴上，使用者將可以正常呼吸──好比說，你就不用再擔心那些嗆人的濃煙了。我相信你們一定會發掘出這個小瓶的各種奇特用途。</p></div>
 
 <div class="Move"><p class="MagicItem">飛翔天際的愚者, 蠟翼, 滔天大錯 (Folly Held Aloft, The Wax Wings, A Huge Mistake)	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">
@@ -419,13 +420,22 @@
 <p>
 	當你在查閱這這本書的時候進行<b>憶述見聞</b>時，你獲得一個額外效果：擲出12+時，GM會為你正遭遇的問題或情境提供一個解決方案。</p></div>
 
-<div class="Move"><p class="MagicItem">Inspectacles	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">Rough-hewn glass in wooden frames. Dinged up and barely held together, they somehow allow the wearer to see much more than their naked eyes might. When you discern realities wearing these gifted lenses, you get to bend the rules a little. On a roll of 10+, ask any three questions you like. They don’t have to be on the list. As long as sight could give you answers, the GM will tell you what you want to know.</p></div>
+<div class="Move"><p class="MagicItem">鑑識眼鏡 (Inspectacles)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	嵌在木質邊框中的粗製玻璃鏡片，受損且幾乎快要散架。不知怎地，它能夠讓穿戴者看見遠遠超過他們肉眼所能看見的事物。當你在戴著這付天才眼鏡的同時進行<b>審視現狀</b>時，你將能夠稍微變更規則：擲出10+時，你可以任意詢問三個問題。這些問題不需要在原本的問題清單上。只要視覺能夠給你答案，GM就會告訴你任何你想要知道的事情。</p></div>
 
-<div class="Move"><p class="MagicItem">The Ku’meh Maneuver	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">A great, leathery tome worn shiny by the hands of a hundred great generals, this book is often passed from warrior to warrior, from father to son along the great battle lines that have divided Dungeon World’s past. Anyone reading it may, upon finishing for the first time, roll+INT. ✴On a 10+, hold 3. ✴On a 7-9, hold 1. You may spend your hold to advise a companion on some matter of strategic or tactical significance. This advice allows you to, at any time, regardless of distance, roll to aid them on any one roll. On a miss, the GM can hold 1 and spend it to apply -2 to any roll of yours or the poor sap who listened to your advice.</p></div>
-<div class="Move"><p class="MagicItem">Lamented Memento	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">Taking the form of a single lock of bright red hair, bound in a black ribbon and immune to the ravages of time, the Lamented Memento bears a grim enchantment. In it are the memories and emotions of a girl who dealt with Death at the Black Gates so many times that, in the end, they fell in love and she left the world to be with him for a time. Her memory protects the wielder. If he finds himself at the Gates, the Memento can be traded for an automatic result of 10+ on the Last Breath move.</p></div>
+<div class="Move"><p class="MagicItem">古梅兵法 (The Ku’meh Maneuver)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一本皮革製的厚重典籍，經歷過數百名偉大將軍之手，這本書早已被磨得光亮。它經常由戰士交與戰士、父親傳承給子嗣，依循著那劃分出地城世界過往歷史的宏大戰線代代相傳。任何閱讀這本書的人，在第一次閱畢之後，可以擲+智力：<br/>
+	✴擲出10+時，獲得 3掌握。<br/>
+	✴擲出7-9時，獲得 1掌握。<br/>
+	你可以消耗你的掌握，向一名同伴提出一個具有戰略或戰術意義的建議。這個建議將讓你得以在任何時候、無論距離多遠，都能讓你擲骰以<b>援助</b>對方的一次擲骰。</p>
+<p class="NoIndent">
+	✴擲出失敗時，GM獲得 1掌握，並得以消耗它，讓你或聽從你愚蠢建議的可憐人的擲骰承受 -2 減值。</p></div>
+
+<div class="Move"><p class="MagicItem">哀嘆遺物 (Lamented Memento)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	哀嘆遺物的外型是一縷繫著黑色絲帶的鮮紅色秀髮，它蘊含著一股詭異的魔力，使其完全免疫於時間的摧殘。在這之中保存著一名女孩的記憶和情感，她在死亡國度前的黑門與死神交手了太多太多次，以至於最終他們墜入了愛河，而她甚至為了祂拋棄了世界，與祂共度過了一段時間。她的記憶能夠保護佩戴者，若佩戴者發現自己臨到黑門前方，他將可以把這個遺物交出去，並自動獲得在臨死一息動作中擲出10+時的結果。</p></div>
 
 <div class="Move"><p class="MagicItem">磁石之盾 (Lodestone Shield)	<span class="Tags">+1 護甲, 1 重量</span></p>
 <p class="NoIndent">
@@ -435,22 +445,36 @@
 <p class="NoIndent">
 	遠古之前，一支勇敢的遊騎兵部隊曾經在這片土地上巡邏，保護村落，並警告國王和王后關於那侵犯而至的危機。儘管他們早已不復存在，但他們的遺產仍得以存留。當使用一群人的鮮血在這張地圖上作記號時，只要他們仍在這張地圖的範圍內，這張地圖就會一直標示出他們的所在位置。</p></div>
 
-<div class="Move"><p class="MagicItem">Ned’s Head	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">An old skull, missing its jaw and very much worse-for-wear. The skull remembers the folly of its former owner—a man with more honor than sense. Once per night, the owner of the skull can ask “Who has it in for me?” and the skull will give up one name in a sad, lonely voice. If the owner of the skull is ever killed, it disappears surreptitiously. No one knows where it might turn up next.</p></div>
-<div class="Move"><p class="MagicItem">Nightsider’s Key	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">This key unlocks any door for you, provided you don’t belong where you intend to go. So long as you do nothing that would alert another to your presence (remaining unheard, unseen and unnoticed) and takes nothing more than your memories out with you, the key’s magic will prevent your intrusion from ever being discovered. It’s like you were never there at all.</p></div>
-<div class="Move"><p class="MagicItem">Sacred Herbs	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">The sacred herbs, collected and prepared by an order of lost wizard-monks, can be found in bundles with two or three uses to them. Kept dry, they last indefinitely. When smoked in a pipe or consumed in an incense burner and the thick, blue smoke inhaled, these herbs will grant you strange visions of faraway places and distant times. If you focus your will on a particular person, place or thing, the herbs will respond: roll+WIS. ✴On a 10+, the vision is clear and useful—yielding some valid information. ✴On a 7–9, the vision is about the thing desired, but is unclear, fraught with metaphor or somehow difficult to understand. ✴On a miss, the GM will ask you, “What is it you fear most?” You must answer honestly, of course.</p></div>
+<div class="Move"><p class="MagicItem">奈德的頭顱 (Ned’s Head)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一個古老的頭骨，缺少下顎，且磨損相當嚴重。這個頭骨仍然記得它上一個擁有者的愚蠢──他是個心中榮譽更勝過理智的傢伙。每個夜晚一次，這個頭骨的擁有者可以詢問「有誰打算對我不利？」，而這個頭骨將會以一個悲傷、孤獨的聲音說出一個名字。若這個頭骨的擁有者被殺死，它將會悄悄地消失不見。沒有人知道它下一次將出現在什麼地方。</p></div>
+
+<div class="Move"><p class="MagicItem">夜黨之鑰 (Nightsider’s Key)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	只要你不歸屬於你打算前去的地方，這把鑰匙就能夠為你解鎖任何門上的鎖。此外，只要你不做出任何會讓他人注意到你存在的舉動（保持不被聽見、不被看見、不被注意），且除了你的記憶之外不取分毫，這把鑰匙的魔力就能防止你入侵的舉動被發現，就彷彿你從來沒有去過那裏一般。</p></div>
+
+<div class="Move"><p class="MagicItem">神聖香草 (Sacred Herbs)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	由一個失落已久的巫僧宗派採集並預備，神聖香草通常會以成捆的形式被發現，且份量足夠使用二到三次。只要保持乾燥，它們就可以無限期地被保存下來。當被放在煙管或香爐中焚燒，並吸入那厚重的湛藍濃煙時，這些香草將賦予你奇異的幻景，映照著某個遙遠時空的景象。若你集中意識，專注於某個特定的人事物，則香草將會回應你：擲+睿知：<br/>
+	✴擲出10+時，幻景清晰且實用，帶來了一些有用的情報。<br/>
+	✴擲出7-9時，你看見了關於渴望事物的幻景，但它模糊不清、充滿隱喻、或難以理解。<br/>
+	✴擲出失敗時，GM將會詢問你「你最害怕的是什麼？」。理所當然，你必須誠實地回答。</p></div>
 
 <div class="Move">
 	<p class="MagicItem">薩塔爾說書鴨鴨 (The Sartar Duck)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">
 	一隻手工雕刻而成的奇怪木製鴨子。到底是誰會做出這種有趣的玩意兒？當你帶著它時，你將發現自己變成了一名天賦異稟的說書人──不管使用什麼語言，你都能讓任何聽眾清楚明白的理解你和你所述說的故事。即使他們聽不懂你的話，也能明白你的意思。</p></div>
 
-<div class="Move"><p class="MagicItem">Tears of Annalise	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">Cloudy red gemstones the size of a thumbnail, the Tears of Annalise are always found in pairs. When swallowed by two different people, they bind the swallowers together—when either feels strong emotions (particularly sadness, loss, fear or desire) the other feels it, as well. The effects last until one spills the blood of the other.</p></div>
-<div class="Move"><p class="MagicItem">Teleportation Room	<span class="Tags">緩慢</span></p>
-<p class="NoIndent">James Ninefingers, eccentric genius mage, created these room-sized magical apparati. A stone chamber etched with runes and scribblings, glowing with a faint blue light. When you enter and say aloud the name of a location, roll+INT. ✴On a 10+, you arrive exactly where you’d intended. ✴On a 7–9, the GM chooses a safe location nearby. ✴On a miss, you end up someplace. Maybe it’s nearby? It’s definitely not safe. Strange things sometimes happen to those who bend time and space with these devices.</p></div>
+<div class="Move"><p class="MagicItem">安娜莉絲的眼淚 (Tears of Annalise)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	拇指大小的濁紅色寶石，安娜莉絲的眼淚總是成對出現。當被兩個不同的人吞下後，這對寶石將會把這兩個人聯繫在一起──當其中一方感受到強烈的情緒（尤其是傷心、失落、恐懼、或渴望）時，另一方也會感受到相同的情緒。這個效果將持續直到其中一方讓另一方濺出鮮血。</p></div>
+
+<div class="Move"><p class="MagicItem">傳送房間 (Teleportation Room)	<span class="Tags">緩慢</span></p>
+<p class="NoIndent">
+	詹姆斯．九指，一名古怪的天才巫師，打造了這個房間大小的魔法裝置。傳送房間是一間石室，刻滿了散發著淡淡藍光的符文和草書。當你進入這個房間並大聲說出一個地點的名稱時，擲+智力：<br/>
+	✴擲出10+時，你確實抵達了你想要去的場所。<br/>
+	✴擲出7-9時，GM將選擇讓你抵達附近的一處安全場所。<br/>
+	✴擲出失敗時，你來到某個場所。也許就在附近？但肯定不怎麼安全。怪事經常會發生在那些嘗試使用這個裝置來扭曲時間和空間的人身上。</p></div>
 
 <div class="Move"><p class="MagicItem">蒂蒙之甲 (Timunn’s Armor)	<span class="Tags">1 護甲, 1 重量</span></p>
 <p class="NoIndent">
