--- a/gm/the_world/index.html
+++ b/gm/the_world/index.html
@@ -323,40 +323,70 @@
 	<li>這個城市坐落於奧法能量匯聚之地: <tag>奧法</tag>, <tag>重要人士(看守著能量匯聚之地的人物)</tag>, <tag>禍害(奧法生物)</tag></li></ul>
 
 <hr/>
-<h2>戰役地圖中的前置 (Fronts on the Campaign Map)</h2>
-<p class="NoIndent">Your steadings are not the only thing on the campaign map. In addition to steadings and the areas around them your fronts will appear on the map, albeit indirectly.</p>
-<p>Fronts are organizational tools, not something the characters think of, so don’t put them on the map directly. The orcs of Olg’gothal may be a front but don’t just draw them on the map. Instead for each front add some feature to the map that indicates the front’s presence. You can label it if you like, but use the name that the characters would use, not the name you gave the front.</p>
-<p>For example, the orcs of Olg’gothal could be marked on the map with a burning village they left behind, fires in the distance at night, or a stream of refugees. Lord Xothal, a lich, might be marked by the tower where dead plants take root and grow.</p>
-<p>As your fronts change, change the map. If the players cleanse Xothal’s tower redraw it. If the orcs are driven off erase the crowds of refugees.</p>
+<h2>戰役地圖中的前置</h2>
+<p class="NoIndent">
+	聚落並不是唯一會出現在你戰役地圖上的事物。儘管只是間接的，但除了聚落以及周遭區域之外，你的前置也同樣會出現在地圖上。</p>
+<p>
+	前置是用以組織危害的工具，而非角色們會想到的事物，因此請不要直接把它們放到地圖上。或許你的前置中寫有奧格戈塔爾部落的獸人們，儘管這看起來很具體，但不要直接把牠們畫在地圖上。相反的，在地圖上為每個前置添加一些特徵來間接表明這個前置的存在。若你希望的話，你可以為它們加上一些標籤，但這時請使用角色們會用來稱呼它們的名稱，而不是直接使用你給前置取的名稱。</p>
+<p>
+	舉例來說，奧格戈塔爾的獸人們可能會導致地圖上標記出牠們掠奪後遺留下來的燃燒村莊、深夜中出現在遠處的大火、或者侵占後導致的難民人潮。而索塔爾大帝，一名邪惡的巫妖，則可能會透過那被生根茁壯的死亡植物所環繞的高塔而被標記在地圖上。</p>
+<p>
+	當你的前置發生改變，也一併改變地圖上的內容。若玩家們淨化了索塔爾大帝的邪惡高塔，則重新繪製它。如果獸人們被驅趕離開，那麼大批難民群眾就會回到他們的家鄉，並從地圖上消失。</p>
 
 <hr/>
-<h2>更新戰役地圖 (Updating the Campaign Map)</h2>
-<p class="NoIndent">The campaign map is updated between sessions or whenever the players spend significant downtime in a safe place. Updates are both prescriptive and descriptive: if an event transpires that, say, gathers a larger fighting force to a village, update the tags to reflect that. Likewise if a change in tags mean that a village has a bigger fighting force you’ll likely see more armored men in the street.</p>
-<p>Between each session check each of the conditions below. Go down the list and check each condition for all steadings before moving to the next. If a condition applies, apply its effects.</p>
-<h4>Growth</h4>
-<p class="NoIndent">When <strong>a village or town is booming and its prosperity is above moderate</strong> you may reduce prosperity and defenses to move to the next largest type. New towns immediately gain market and new cities immediately gain guild (your choice).</p>
-<h4>Collapse</h4>
-<p class="NoIndent">When <strong>a steading’s population is in exodus and its prosperity is poor or less</strong> it shrinks. A city becomes a town with a steady population and +prosperity. A keep becomes a town with +defenses and a steady population. A town becomes a village with steady population and +prosperity. A village becomes a ghost town.</p>
-<h4>Want</h4>
-<p class="NoIndent">When <strong>a steading has a need that is not fulfilled</strong> (through trade, capture, or otherwise) that steading is in want. It gets either -prosperity, -population, or loses a tag based on that resource like craft or trade, your choice.</p>
-<h4>Trade</h4>
-<p class="NoIndent">When <strong>trade is blocked</strong> because the source of that trade is gone, the route is endangered, or political reasons, the steading has a choice: gain need (a traded good) or take -prosperity.</p>
-<h4>Capture</h4>
-<p class="NoIndent">When <strong>control of a resource changes</strong> remove that resource from the tags of the previous owner and add it to the tags of the new owner (if applicable). If the previous owner has a craft or trade based on that resource they now have need (that resource). If the new owner had a need for that resource, remove it.</p>
-<h4>Profit</h4>
-<p class="NoIndent">When <strong>a steading has more trade than its current prosperity</strong> it gets +prosperity.</p>
-<h4>Surplus</h4>
-<p class="NoIndent">When <strong>a steading has a resource that another steading needs</strong> unless enmity or other diplomatic reasons prevent it they set up trade. The steading with the resource gets +prosperity and their choice of oaths, +population, or +defenses; the steading with the need erases that need and adds trade.</p>
-<h4>Aid</h4>
-<p class="NoIndent">When <strong>a steading has oaths to a steading under attack</strong> that steading may take -defenses to give the steading under attack +defenses.</p>
-<h4>Embattled</h4>
-<p class="NoIndent">When <strong>a steading is surrounded by enemy forces</strong> it suffers losses. If it fights back with force it gets -defenses. If its new defenses are watch or less it also gets -prosperity. If it instead tries to wait out the attack it gets -population. If its new population is shrinking or less it loses a tag of your choice. If the steading’s defenses outclass the attacker’s (your call if it’s not clear, or make it part of an adventure front) the steading is no longer surrounded.</p>
-<h4>Opportunity</h4>
-<p class="NoIndent">When <strong>a steading has enmity against a weaker steading</strong> they may attack. Subtract the distance (in rations) between the steadings from the steading with enmity’s defenses. If the result is greater than the other steading’s defenses +defense for each step of size difference (village to town, town to keep, keep to city) they definitely attack. Otherwise it’s your call: has anything happened recently to stoke their anger? The forces of the attacker embattle the defender, while they maintain the attack they’re -defenses.</p>
-<h4>Clash</h4>
-<p class="NoIndent">When <strong>two steadings both attack each other</strong> their forces meet somewhere between them and fight. If they’re evenly matched they both get -defenses and their troops return home. If one has the advantage they take -defenses while the other takes -2 defenses.</p>
-<h3>Other Updates</h3>
-<p class="NoIndent">The conditions above detail the most basic of interactions between steadings, of course the presence of your fronts and the players mean things can get far more complex. Since tags are descriptive, add them as needed to reflect the players’ actions and your fronts’ effects on the world.</p>
+<h2>更新戰役地圖</h2>
+<p class="NoIndent">
+	戰役地圖會在每次聚會之間、以及當玩家們在安全場所花了大量的修整時間後更新變化。地圖的更新同時具備敘事性或規則性：當某個事件發生，比如說，當更強大的戰力集結到了村莊時，更新聚落上的標籤以反映這個變化。同樣的，若標籤的變化意味著村莊中集結了更多戰力，那麼你就很有可能會在街道上遇見更多全副武裝的人們。</p>
+<p>
+	在每次聚會之間，依序檢查下列清單中每個狀態，並確認戰役地圖上的所有聚落是否符合其條件。若條件符合，則對該聚落應用其效果。</p>
+
+<h4>增長 (Growth)</h4>
+<p class="NoIndent">
+	當<strong>村莊或小鎮的人口標籤為<tag class="green">急速發展</tag>，且經濟標籤高於<tag class="red">普通</tag></strong>，則你可以降低經濟和防禦的評級，使這個聚落的大小規模提升一級（村莊變為小鎮，小鎮變為城市）。新的小鎮將立刻獲得<tag>市場</tag>標籤，而新的城市將立刻獲得<tag>行會（由你選擇）</tag>標籤。</p>
+
+<h4>萎縮 (Collapse)</h4>
+<p class="NoIndent">
+	當<strong>聚落的人口標籤為<tag class="green">大舉遷出</tag>，且經濟標籤在<tag class="red">貧窮</tag>或更低</strong>，它的規模將會縮水。城市將變為人口<tag class="green">穩定</tag>且<tag class="red">+[經濟]</tag>的小鎮。要塞將變為人口<tag class="green">穩定</tag>且<tag class="blue">+[防禦]</tag>的小鎮。小鎮將變為人口<tag class="green">穩定</tag>且<tag class="red">+[經濟]</tag>的村莊。而村莊將變為一座鬼城，再也沒有任何人居住。</p>
+
+<h4>匱乏 (Want)</h4>
+<p class="NoIndent">
+	當<strong>聚落擁有一個未被滿足的<tag>需求</tag>標籤</strong>（也許是因為貿易中斷、奪獲、或其他因素），則該聚落將陷入匱乏狀態。它將會<tag class="red">-[經濟]</tag>、<tag class="green">-[人口]</tag>、或失去一個基於該資源的標籤，像是<tag>工藝</tag>或<tag>貿易關係</tag>，由你決定。</p>
+
+<h4>貿易中斷 (Trade)</h4>
+<p class="NoIndent">
+	當<strong>貿易被中斷</strong>時，也許是因為貿易的來源消失、貿易路線遭受威脅、或是政治因素，該聚落必須做出選擇：獲得<tag>需求(貿易商品)</tag>標籤、或承受<tag class="red">-[經濟]</tag>。</p>
+
+<h4>奪獲 (Capture)</h4>
+<p class="NoIndent">
+	當<strong>資源的控制權發生改變</strong>時，將該資源的標籤從前一個擁有者身上移除，並將之添加到新的擁有者手上（若適用）。若前一個擁有者同時具備基於該資源的<tag>工藝</tag>或<tag>貿易關係</tag>標籤，則他們現在將獲得<tag>需求(該資源)</tag>標籤。若新的擁有者原本擁有<tag>需求(該資源)</tag>標籤，則將之移除。</p>
+
+<h4>收益 (Profit)</h4>
+<p class="NoIndent">
+	當<strong>聚落擁有超過它目前經濟等級的<tag>貿易關係</tag>數量</strong>時，它獲得<tag class="red">+[經濟]</tag>。</p>
+
+<h4>貿易順差 (Surplus)</h4>
+<p class="NoIndent">
+	當<strong>聚落擁有一個被其他聚落需求的<tag>資源</tag></strong>時，除非他們互相敵對、或有其他外交因素致使他們無法貿易，則擁有該資源的聚落將獲得<tag class="red">+[經濟]</tag>，並可以再選擇獲得<tag>誓約關係</tag>、<tag class="green">+[人口]</tag>、或<tag class="blue">+[防禦]</tag>；擁有該需求的聚落將隨之移除這個<tag>需求</tag>標籤，並添加<tag>貿易關係</tag>標籤。</p>
+
+<h4>援助 (Aid)</h4>
+<p class="NoIndent">
+	當<strong>聚落擁有對某個正遭受攻擊的聚落的<tag>誓約關係</tag></strong>，該聚落可以承受<tag class="blue">-[防禦]</tag>來使被攻擊的聚落獲得<tag class="blue">+[防禦]</tag>。</p>
+
+<h4>圍困 (Embattled)</h4>
+<p class="NoIndent">
+	當<strong>聚落被敵軍團團包圍時</strong>，它將遭受到各種損失。若該聚落出兵反擊，則它將承受<tag class="blue">-[防禦]</tag>。若它新的防禦等級為<tag class="blue">放哨</tag>或更低，則它將一併承受<tag class="red">-[經濟]</tag>。若該聚落決定試著等待攻擊過去，則它將承受<tag class="green">-[人口]</tag>。若它新的人口等級為<tag class="green">縮減</tag>或更低，則它將連帶失去一個你所選擇的標籤。若該聚落的防禦能力遠遠勝過攻擊者的兵力（若情況不清楚的話則由你決定，或把它作為冒險前置中的一部份），則該聚落將不再視作被圍困。</p>
+
+<h4>進攻機會 (Opportunity)</h4>
+<p class="NoIndent">
+	當<strong>聚落擁有對另一個較為弱小聚落的<tag>敵對關係</tag></strong>，則他們將有可能出兵襲擊。把敵對聚落的防禦等級扣掉這兩個聚落之間的距離（以口糧為單位），若結果大於另一個聚落的防禦等級+規模差異（村莊/小鎮/要塞/城市），則他們必定會出兵。除此之外的場合，是否出兵將由你決定：想想看，最近是否發生了任何會引發他們怒火的事件？當攻擊方的軍隊包圍了防禦方且持續進攻時，他們都將因此承受<tag class="blue">-[防禦]</tag>。</p>
+
+<h4>衝突 (Clash)</h4>
+<p class="NoIndent">
+	當<strong>雙方聚落都對彼此出兵</strong>時，他們的軍隊將會在中間某處相遇並交戰。若他們的戰力相當，則他們都將承受<tag class="blue">-[防禦]</tag>，並撤回軍隊。若其中一方具有優勢，則擁有優勢的一方將承受<tag class="blue">-[防禦]</tag>，而另一方的防禦等級將會承受 -2 的防禦等級。</p>
+
+<h3>其他更新</h3>
+<p class="NoIndent">
+	上述狀態記載了聚落與聚落之間最基本的互動情境，當然，你所設定的前置以及玩家們的存在，意味著情況可能會發展到更為複雜的局面。由於標籤具備著敘事性，因此你可以在任何時候添加它們，以反映出玩家們的行動以及你的前置對這個世界造成的影響。</p>
 
           </div>
        </div>
