--- a/monsters/caverns/index.html
+++ b/monsters/caverns/index.html
@@ -156,7 +156,7 @@
 <p class="MonsterStats">斧頭 (d6 傷害), 7 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">
-	長久以來，人們相信所有矮人都是男性，且全都是同一種類型的人：他們被認為是堅忍不拔且驕傲的戰士，手持戰斧，身披板甲，魁梧濃鬚且渴望戰鬥，並會一次又一次的將敵人從礦井和隧道中兇猛地驅趕出去。這正好表現了人們對於這古老種族的理解有多麼稀少。這些人只不過是先鋒隊，勇敢地旅行他們的職責，盡全力守護矮人王國的豐饒財富。只要贏得他們的信任，你就能得到一輩子的盟友。但若激起他們的忿怒，你可不會有太長的時間能後悔。 <b>本能</b>: 防衛</p>
+	長久以來，人們相信所有矮人都是男性，且全都是同個模子刻出來的：他們被認為是堅忍不拔且驕傲的戰士，手持戰斧，身披板甲，魁梧濃鬚且渴望戰鬥，並會一次又一次的將敵人從礦井和隧道中兇猛地驅趕出去。這正好表現了人們對於這古老種族的理解有多麼稀少。這些人只不過是族中的先鋒，勇敢地旅行他們的職責，盡全力守護矮人王國的豐饒財富。只要贏得他們的信任，你就能得到一輩子的盟友。但若激起他們的忿怒，你可不會有太長的時間能後悔。 <b>本能</b>: 防衛</p>
 <ul>
 	<li>將它們驅趕出去</li>
 	<li>召集援軍</li>
