--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -136,10 +136,10 @@
 </ul>
 <h3 class="MonsterName">半人馬 (Centaur)<span class="Tags">成群, 大型, 組織, 聰穎</span></h3>
 <p class="MonsterStats">弓 (d6+2 傷害, 1 穿透), 11 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">近身, 及遠, Near</span></p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠, 短程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 半人半馬</p>
 <p class="MonsterDescription">
-	「這將是這個世代前所未見的氏族集會。呼叫暴風蹄與輝矛氏族，召集白鬃與鐵脅部落，吹響號角，然後開始我們的會議－－我們要把話說出口，將我們的人民團結合一。這些人類為造船而砍伐我們古樹的歷史已經太久太久。精靈們軟弱、膽小、甘願成為那些爛泥敗類的朋友。我們將成為來自至暗森林中的淨化之火。揚起鮮紅色的戰爭旗幟！今天我們要反擊，對抗這些猿猴，並奪回屬於我們的東西！」 <b>本能</b>: 狂怒</p>
+	「這將是這個世代前所未見的氏族集會。呼叫暴風蹄與輝矛氏族，召集白鬃與鐵脅部落，吹響號角，然後開始我們的會議－－我們要把話說出口，將我們的人民團結合一。這些人類為造船而砍伐我們古樹的歷史已經太久太久。精靈們軟弱、膽小、甘願成為那些爛泥敗類的朋友。我們將化作來自至暗森林中的淨化之火。揚起鮮紅色的戰爭旗幟！今天我們要反擊，對抗這些猿猴，並奪回屬於我們的東西！」 <b>本能</b>: 狂怒</p>
 <ul>
 	<li>蹂躪敵人</li>
 	<li>射出完美的正中紅心</li>
@@ -164,7 +164,7 @@
 	<li>讓某人開始緩慢地轉變成石頭</li>
 </ul>
 <h3 class="MonsterName">樹精 (Dryad)<span class="Tags">單獨, 魔法, 聰穎, 狡猾</span></h3>
-<p class="MonsterStats">Crushing vines (w[2d8]傷害), 12 HP, 2 護甲</p>
+<p class="MonsterStats">壓制藤鞭 (低[2d8]傷害), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 植物</p>
 <p class="MonsterDescription">More beautiful by far than any man or woman born in the civil realms. To gaze upon one is to fall in love. Deep and punishing, too. Thing is, they don’t love—not the fleshy folk who often find them, anyway. Their love is a primal thing, married to the woods—to a great oak that serves as home and mother and sacred place to them. It’s a curse to see one, too, they’ll never love you back. No matter what you do. No matter how you pledge yourself to them, they’ll always spurn you. If ever their oak comes to harm, you’ve not only the dryad’s wrath to contend with, but in every nearby village there’s a score of men with a secret longing in their heart, ready to murder you where you sleep for just a smile from such a creature. <b>本能</b>: 熱愛自然</p>
@@ -173,18 +173,19 @@
 	<li>融身入樹</li>
 	<li>讓大自然與他們為敵</li></ul>
 <h3 class="MonsterName">鷹王 (Eagle Lord)<span class="Tags">集團, 大型, 組織, 聰穎</span></h3>
-<p class="MonsterStats">禽爪 (b[2d8]+1 傷害, 1 穿透), 10 HP, 1 護甲</p>
+<p class="MonsterStats">禽爪 (高[2d8]+1 傷害, 1 穿透), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 強健飛翼</p>
-<p class="MonsterDescription">Some the size of horses. Bigger, even—the kings and queens of the eagles. Their cry pierces the mountain sky and woe to those who fall under the shadow of their mighty wings. The ancient wizards forged a pact with them in the primordial days. Men would take the plains and valleys and leave the mountaintops to the eagle lords. These sacred pacts should be honored, lest they set their talons into you. Lucky are the elves, for the makers of their treaties yet live and when danger comes to elvish lands, the eagle lords often serve as spies and mounts for them. Long-lived and proud, some might be willing to trade their ancient secrets for the right price, too. <b>本能</b>: To rule the heights</p>
-<ul><li>Attack from the sky</li>
-<li>Pull someone into the air</li>
-<li>Call on ancient oaths</li></ul>
+<p class="MonsterDescription">Some the size of horses. Bigger, even—the kings and queens of the eagles. Their cry pierces the mountain sky and woe to those who fall under the shadow of their mighty wings. The ancient wizards forged a pact with them in the primordial days. Men would take the plains and valleys and leave the mountaintops to the eagle lords. These sacred pacts should be honored, lest they set their talons into you. Lucky are the elves, for the makers of their treaties yet live and when danger comes to elvish lands, the eagle lords often serve as spies and mounts for them. Long-lived and proud, some might be willing to trade their ancient secrets for the right price, too. <b>本能</b>: 掌管高空</p>
+<ul>
+	<li>從天空襲擊</li>
+	<li>將某人抓到空中</li>
+	<li>應古老盟約的呼召而來</li></ul>
 <h3 class="MonsterName">精靈戰士 (Elvish Warrior)<span class="Tags">成群, 聰穎, 組織</span></h3>
-<p class="MonsterStats">利劍 (b[2d6] 傷害), 3 HP, 2 護甲</p>
+<p class="MonsterStats">利劍 (高[2d6] 傷害), 3 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳感官</p>
-<p class="MonsterDescription">”As with all things they undertake, the elves approach war as an art. I saw them fight, once. The Battle of Astrid’s Veil. Yes, I am that old, boy, now hush. A warrior-maiden, she was clad in plate that shone like the winter sky. White hair streaming and a pennant of ocean blue tied to her spear. She seemed to glide between the trees the way an angel might, striking out and bathing her blade in blood that steamed in the cold air. I never felt so small before. I trained with the master-at-arms of Battlemoore, you know. I’ve held a sword longer than you’ve been alive, boy, and in that one moment I knew that my skill meant nothing. Thank the gods the elves were with us then. A more beautiful and terrible thing I have never seen.” <b>本能</b>: To seek perfection</p>
+<p class="MonsterDescription">”As with all things they undertake, the elves approach war as an art. I saw them fight, once. The Battle of Astrid’s Veil. Yes, I am that old, boy, now hush. A warrior-maiden, she was clad in plate that shone like the winter sky. White hair streaming and a pennant of ocean blue tied to her spear. She seemed to glide between the trees the way an angel might, striking out and bathing her blade in blood that steamed in the cold air. I never felt so small before. I trained with the master-at-arms of Battlemoore, you know. I’ve held a sword longer than you’ve been alive, boy, and in that one moment I knew that my skill meant nothing. Thank the gods the elves were with us then. A more beautiful and terrible thing I have never seen.” <b>本能</b>: 追尋完美</p>
 <ul><li>Strike at a weak point</li>
 <li>Set ancient plans in motion</li>
 <li>Use the woods to advantage</li></ul>
@@ -229,7 +230,7 @@
 	<li>撕毀防具和武器</li>
 </ul>
 <h3 class="MonsterName">薩特羊人 (Satyr)	<span class="Tags">集團, 狡猾, 魔法, 囤財者</span></h3>
-<p class="MonsterStats">衝鋒 (w[2d8] 傷害), 10 HP, 1 護甲</p>
+<p class="MonsterStats">衝鋒 (低[2d8] 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Enchantment</p>
 <p class="MonsterDescription">One of only a very few creatures to be found in the old woods that don’t outright want to maim, kill, or eat us. They dwell in glades pierced by the sun, and dance on their funny goat-legs to enchanting music played on pipes made of bone and silver. They smile easily and, so long as you please them with jokes and sport, will treat our kind with friendliness. They’ve a mean streak, though, so if you cross them, make haste elsewhere; very few things hold a grudge like the stubborn satyr. <b>本能</b>: To enjoy</p>
@@ -237,7 +238,7 @@
 <li>Force gifts upon them</li>
 <li>Play jokes with illusions and tricks</li></ul>
 <h3 class="MonsterName">小妖精 (Sprite)	<span class="Tags">成群, 微型, 隱匿, 魔法, 狡猾, 聰穎</span></h3>
-<p class="MonsterStats">匕首 (w[2d4] 傷害), 3 HP, 0 護甲</p>
+<p class="MonsterStats">匕首 (低[2d4] 傷害), 3 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">觸及</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 飛翼, 妖精魔法</p>
 <p class="MonsterDescription">
@@ -264,16 +265,16 @@
 	<li>散播古老魔法</li>
 </ul>
 <h3 class="MonsterName">狼人 (Werewolf)	<span class="Tags">單獨, 聰穎</span></h3>
-<p class="MonsterStats">Bite (d10+2 damage, 1 piercing), 12 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">Close, Messy</span></p>
+<p class="MonsterStats">啃咬 (d10+2 傷害, 1 穿透), 12 HP, 1 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身, 毀亂</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Weak to silver</p>
 <p class="MonsterDescription">“Beautiful, isn’t it? The moon, I mean. She’s watching us, you know? Her pretty silver eyes watch us while we sleep. Mad, too—like all the most beautiful ones. If she were a woman, I’d bend my knee and make her my wife on the spot. No, I didn’t ask you here to speak about her, though. The chains? For your safety, not mine. I’m cursed, you see. You must have suspected. The sorcerer-kings called it “lycanthropy” in their day—passed on by a bite to make more of our kind. No, I could find no cure. Please, don’t be scared. You have the arrows I gave you? Silver, yes. Ah, you begin to understand. Don’t cry, sister. You must do this for me. I cannot bear more blood on my hands. You must end this. For me.” <b>本能</b>: To shed the appearance of civilization</p>
 <ul><li>Transform to pass unnoticed as beast or man</li>
 <li>Strike from within</li>
 <li>Hunt like man and beast</li></ul>
 <h3 class="MonsterName">座狼 (Worg)<span class="Tags">成群, 組織</span></h3>
-<p class="MonsterStats">Bite (d6 damage), 3 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">Close</span></p>
+<p class="MonsterStats">啃咬 (d6 傷害), 3 HP, 1 護甲</p>
+<p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">As horses are to the civil races, so go the worg to the goblins. Mounts, fierce in battle, ridden by only the bravest and most dangerous, are found and bred in the forest primeval to serve the goblins in their wars on men. The only safe worg is a pup, separated from its mother. If you can find one of these, or make orphans of a litter with a sharp sword, you’ve got what could become a loyal protector or hunting hound in time. Train it well, mind you, for the worg are smart and never quite free of their primal urges. <b>本能</b>: To serve</p>
 <ul>
 	<li>載著騎手衝入戰場</li>
